--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -54,7 +54,7 @@
 				</ul>
 			</div>
 
-            {% for course_org in all_orgs %}
+            {% for course_org in all_orgs.object_list %}
                 <dl class="des difdes">
                     <dt>
                         <a href="org-detail-homepage.html">
@@ -66,11 +66,8 @@
                              <a href="org-detail-homepage.html">
                                  <h1>慕课网</h1>
                                  <div class="pic fl">
-
-                                         <img src="{% static 'images/authentication.png' %}"/>
-
-                                         <img src="{% static 'images/gold.png' %}"/>
-
+                                     <img src="{% static 'images/authentication.png' %}"/>
+                                     <img src="{% static 'images/gold.png' %}"/>
                                  </div>
                              </a>
                         </div>
@@ -78,11 +75,8 @@
                             <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
                             <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
                             <li class="pic10" style="padding-left:18px;">经典课程：
-
-                                    <a href="/diary/19/">c语言基础入门</a>
-
-                                    <a href="/diary/16/">数据库基础</a>
-
+                                <a href="/diary/19/">c语言基础入门</a>
+                                <a href="/diary/16/">数据库基础</a>
                             </li>
                         </ul>
                     </dd>
@@ -94,31 +88,24 @@
 		</div>
 		 <div class="pageturn">
             <ul class="pagelist">
-
-
-
-
-
-                            <li class="active"><a href="?page=1">1</a></li>
-
-
-
-
-
-                            <li><a href="?page=2" class="page">2</a></li>
-
-
-
-
-
-                            <li><a href="?page=3" class="page">3</a></li>
-
-
-
-
-                    <li class="long"><a href="?page=2">下一页</a></li>
-
-
+                {% if all_orgs.has_previous %}
+                    <li class="long"><a href="?{{ all_orgs.previous_page_number.querystring }}">上一页</a></li>
+                {% endif %}
+            
+            {% for page in all_orgs.pages %}
+                {% if page %}
+                    {% ifequal page all_orgs.number %}
+                        <li class="active"><a href="?{{ page.querystring }}">{{ page }}</a></li>
+                    {% else %}
+                        <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
+                    {% endifequal %}
+                {% else %}
+                    <li class="none"><a href="">...</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if all_orgs.has_next %}
+                <li class="long"><a href="?{{ all_orgs.next_page_number.querystring }}">下一页</a></li>
+            {% endif %}
             </ul>
         </div>
 		</div>
@@ -146,8 +133,6 @@
 
 		<div class="right companyrank layout">
 			<div class="head">授课机构排名</div>
-
-
                 <dl class="des">
                     <dt class="num fl">1</dt>
                     <dd>
@@ -171,9 +156,6 @@
                         <p>北京市</p>
                     </dd>
                 </dl>
-
-
-
 
 		</div>
         </div>
