--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -57,14 +57,14 @@
             {% for course_org in all_orgs.object_list %}
                 <dl class="des difdes">
                     <dt>
-                        <a href="org-detail-homepage.html">
+                        <a href="{% url 'org:org_home' course_org.id %}">
                             <img width="200" height="120" class="scrollLoading" data-url="{{ MEDIA_URL }}{{ course_org.image }}"/>
                         </a>
                     </dt>
                     <dd>
                         <div class="clearfix">
-                             <a href="org-detail-homepage.html">
-                                 <h1>慕课网</h1>
+                             <a href="{% url 'org:org_home' course_org.id %}">
+                                 <h1>{{ course_org.name }}</h1>
                                  <div class="pic fl">
                                      <img src="{% static 'images/authentication.png' %}"/>
                                      <img src="{% static 'images/gold.png' %}"/>
