--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 
             <div class="middle">
                 <div class="wp">
-                    <a href="index.html"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+                    <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
                     <div class="searchbox fr">
                         <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
@@ -58,14 +58,14 @@
 				<div class="nav">
 					<div class="wp">
 						<ul>
-							<li ><a href="index.html">首页</a></li>
+							<li ><a href="{% url 'index' %}">首页</a></li>
 							<li >
-								<a href="course-list.html">
+								<a href="{% url 'org:org_list' %}">
 									公开课<img class="hot" src="{% static 'images/' %}nav_hot.png">
 								</a>
 							</li>
 							<li >
-								<a href="teachers-list.html">授课教师</a>
+{#								<a href="{% url 'org:org_teacher' %}">授课教师</a>#}
 							</li>
 							<li class="active" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
 						</ul>
@@ -82,7 +82,7 @@
 <section>
         <div class="wp">
             <ul  class="crumbs">
-                <li><a href="index.html">首页</a>></li>
+                <li><a href="{% url 'index' %}">首页</a>></li>
                 <li>课程机构</li>
             </ul>
         </div>
