--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 								</a>
 							</li>
 							<li >
-{#								<a href="{% url 'org:org_teacher' %}">授课教师</a>#}
+								<a href="{% url 'org:teacher_list' %}">授课教师</a>
 							</li>
 							<li class="active" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
 						</ul>
