--- a/templates/base.html
+++ b/templates/base.html
@@ -58,16 +58,19 @@
 				<div class="nav">
 					<div class="wp">
 						<ul>
-							<li ><a href="{% url 'index' %}">首页</a></li>
-							<li >
-								<a href="{% url 'org:org_list' %}">
+							<li {% if request.path == '/' %}class="active"{% endif %}><a href="{% url 'index' %}">首页</a></li>
+							<li {% if request.path|slice:'7' == '/course' %}class="active"{% endif %}>
+{#                            说明：request.path|slice:'6'获取url的前6位字符串。#}
+								<a href="{% url 'course:course_list' %}">
 									公开课<img class="hot" src="{% static 'images/' %}nav_hot.png">
 								</a>
 							</li>
-							<li >
+							<li {% if request.path|slice:'12' == '/org/teacher' %}class="active"{% endif %}>
 								<a href="{% url 'org:teacher_list' %}">授课教师</a>
 							</li>
-							<li class="active" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
+							<li {% if request.path|slice:'9' == '/org/list' %}class="active"{% endif %}>
+                                <a href="{% url 'org:org_list' %}">授课机构</a>
+                            </li>
 						</ul>
 					</div>
 				</div>
@@ -432,6 +435,7 @@
 <script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/plugins/jquery.scrollLoading.js' %}"  type="text/javascript"></script>
 <script src="{% static 'js/deco-common.js' %}"  type="text/javascript"></script>
+<script src="{% static 'js/index.js' %}" type="text/javascript" ></script>
 
 
 
