--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,9 @@
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
                     {% endif %}
 
-
-
+                <a href="usercenter-message.html">
+                    <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                </a>
 
 				</div>
 			</div>
