--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -22,37 +22,10 @@
 		<div  class="header2 header">
         <div class="top">
                 <div class="wp">
-                    <div class="fl"><p>服务电话：<b>33333333</b></p></div>
-                    <!--登录后跳转-->
-{#                    {% if request.user.is_authenticated %}#}
-{#                        <div class="personal">#}
-{#                            <dl class="user fr">#}
-{#                                <dd>bobby<img class="down fr" src="/static/images/top_down.png"/></dd>#}
-{#                                <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/>#}
-{#                                </dt>#}
-{#                            </dl>#}
-{#                        </div>#}
-{#                        <div class="userdetail">#}
-{#                            <dl>#}
-{#                                <dt><img width="80" height="80" src="/static/media/image/2016/12/default_big_14.png"/>#}
-{#                                </dt>#}
-{#                                <dd>#}
-{#                                    <h2>django</h2>#}
-{#                                    <p>bobby</p>#}
-{#                                </dd>#}
-{#                            </dl>#}
-{#                            <div class="btn">#}
-{#                                <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>#}
-{#                                <a class="fr" href="/logout/">退出</a>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    {% else %}#}
-{#                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>#}
-{#                        <a style="color:white" class="fr loginbtn" href="/login/">登录</a>#}
-{#                    {% endif %}#}
+					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
+					<!--登录后跳转-->
 
-
-                     {% if request.user.is_authenticated %}
+                    {% if request.user.is_authenticated %}
                         <div class="personal">
                             <dl class="user fr">
                                 <dd>{{ request.user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
@@ -78,7 +51,11 @@
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
                     {% endif %}
 
-                </div>
+                <a href="usercenter-message.html">
+                    <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                </a>
+
+				</div>
             </div>
 
     <div class="middle companyheader">
