--- a/templates/usercenter-base.html
+++ b/templates/usercenter-base.html
@@ -32,29 +32,7 @@
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
 					<!--登录后跳转-->
 
-
-{#                        <div class="personal">#}
-{#                            <dl class="user fr">#}
-{#                                <dd>bobby<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>#}
-{#                                <dt><img width="20" height="20" src="{% static 'media/image/2016/12/default_big_14.png' %}"/></dt>#}
-{#                            </dl>#}
-{#                            <div class="userdetail">#}
-{#                            	<dl>#}
-{#	                                <dt><img width="80" height="80" src="{% static 'media/image/2016/12/default_big_14.png' %}"/></dt>#}
-{#	                                <dd>#}
-{#	                                    <h2>django</h2>#}
-{#	                                    <p>bobby</p>#}
-{#	                                </dd>#}
-{#                                </dl>#}
-{#                                <div class="btn">#}
-{#	                                <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>#}
-{#	                                <a class="fr" href="/logout/">退出</a>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-
-
-                     {% if request.user.is_authenticated %}
+                    {% if request.user.is_authenticated %}
                         <div class="personal">
                             <dl class="user fr">
                                 <dd>{{ request.user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
@@ -80,11 +58,9 @@
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
                     {% endif %}
 
-
-                        <a href="usercenter-message.html">
-                            <div class="msg-num"><span id="MsgNum">0</span></div>
-                        </a>
-
+                <a href="usercenter-message.html">
+                    <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                </a>
 
 				</div>
 			</div>
@@ -121,11 +97,11 @@
 	<div class="wp list personal_list">
 	<div class="left">
         <ul>
-            <li class="active2"><a href="usercenter-info.html">个人资料</a></li>
-            <li ><a href="usercenter-mycourse.html">我的课程</a></li>
-            <li ><a href="usercenter-fav-course.html">我的收藏</a></li>
+            <li class="active2"><a href="{% url 'users:user_info' %}">个人资料</a></li>
+            <li ><a href="{% url 'users:mycourse' %}">我的课程</a></li>
+            <li ><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
             <li >
-                <a href="usercenter-message.html" style="position: relative;">
+                <a href="{% url 'users:mymessage' %}" style="position: relative;">
                     我的消息
                 </a>
             </li>
