--- a/templates/usercenter-base.html
+++ b/templates/usercenter-base.html
@@ -48,7 +48,7 @@
                                 </dl>
                                 <div class="btn">
 	                                <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
-	                                <a class="fr" href="/logout/">退出</a>
+	                                <a class="fr" href="{% url 'logout' %}">退出</a>
                                 </div>
                             </div>
                         </div>
@@ -58,7 +58,7 @@
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
                     {% endif %}
 
-                <a href="usercenter-message.html">
+                <a href="{% url 'users:mymessage' %}">
                     <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
                 </a>
 
